force-app/src/objects/ffbext__OneTouchSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>OneTouch Settings (FF)</description>
    <fields>
        <fullName>ffbext__CashMatchingReportName__c</fullName>
        <label>Cash Matching Report Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbext__EnablePayableCreditNoteApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Payable Credit Note Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbext__EnablePayableInvoiceApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Payable Invoice Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbext__EnableSalesCreditNoteApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Sales Credit Note Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbext__EnableSalesInvoiceApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Sales Invoice Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbext__TransactionEnquiryReportName__c</fullName>
        <label>Transaction Inquiry Report Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>OneTouch Settings (FF)</label>
</CustomObject>